Added signed cookie authentication to all user accessible servlets