@@ -1,12 +1,10 @@
 package com.ethohampton.secret.Util;
 
+import com.google.appengine.repackaged.com.google.api.client.util.Base64;
+
 import java.security.PrivateKey;
 import java.security.PublicKey;
 import java.security.Signature;
-import java.security.SignatureException;
-
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 /**
  * Created by ethohampton on 8/1/17.
@@ -18,29 +16,35 @@ public class VerifyStrings {
 
     private static PrivateKey privateKey;
     private static PublicKey publicKey;
+    private static boolean loadedKeys = false;
 
-    static {
+    public static void loadKeys() {
         try {
             privateKey = LoadKeys.getPrivateKey("WEB_INF/keys/private_key.der");
             publicKey = LoadKeys.getPublicKey("WEB_INF/keys/public_key.der");
+            loadedKeys = true;
         } catch (Exception e) {
             e.printStackTrace();
         }
     }
 
+    public static boolean isKeysLoaded() {
+        return loadedKeys;
+    }
+
     /**
      * @param message the message to sign
      * @return the signature of the message
-     * @throws SignatureException if it can not encode
      */
-    public static String sign(String message) throws SignatureException {
+    public static String sign(String message) {
         try {
             Signature sign = Signature.getInstance("SHA1withRSA");
             sign.initSign(privateKey);
             sign.update(message.getBytes("UTF-8"));
-            return new BASE64Encoder().encode(sign.sign());
+            return new String(Base64.encodeBase64(sign.sign()), "UTF-8");
         } catch (Exception ex) {
-            throw new SignatureException(ex);
+            ex.printStackTrace();
+            return "";
         }
     }
 
@@ -48,16 +52,16 @@ public class VerifyStrings {
      * @param message   message to be validated
      * @param signature signature of message
      * @return if signature and message are valid
-     * @throws SignatureException if it can not decode
      */
-    public static boolean verify(String message, String signature) throws SignatureException {
+    public static boolean verify(String message, String signature) {
         try {
             Signature sign = Signature.getInstance("SHA1withRSA");
             sign.initVerify(publicKey);
             sign.update(message.getBytes("UTF-8"));
-            return sign.verify(new BASE64Decoder().decodeBuffer(signature));
+            return sign.verify(Base64.decodeBase64(signature.getBytes("UTF-8")));
         } catch (Exception ex) {
-            throw new SignatureException(ex);
+            ex.printStackTrace();
+            return false;
         }
     }
 }
